[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skillrobust"
version = "0.1.0"
description = "Package-level robust auditing for untrusted Agent Skill packages."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "SkillRobust Authors" }
]
license = { text = "Research use. Add the final repository license before public release." }
keywords = ["agent safety", "skill auditing", "guardrails", "prompt injection", "security"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Security",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
skillrobust = "skillrobust.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
